tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier4EV-AAAAAAAAAAAAAAAAAAAABg==__HEVMarkIIIProtec-AAAAAAAAAAAAAAAAAAAAvQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 189,
  "prerequisites": [
    190
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Some items will give you a Radiation debuff without protection. How long it lasts depends on the item. Some items will give you an enormous or unlimited time debuff timer, which effectively kills you because there's no way to get rid of it.\n\nOther items will give you a general sickness with many debuffs, but not Radiation. That can be removed the normal ways, Milk, Terrawart, Aqua bees, etc.\n\nIf you wear a Hazmat suit (and rubber boots!) you are not affected by radioactive effects at all. Same for some other armors that list hazmat protection.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§a§lHEV Mark III Protective System",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    190
  ],
  "rewards": [],
  "tasks": []
}
