tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier4EV-AAAAAAAAAAAAAAAAAAAABg==__JustEnoughTungst-AAAAAAAAAAAAAAAAAAAJVg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2390,
  "prerequisites": [
    86,
    2890
  ],
  "properties": {
    "auto_claim": false,
    "desc": "OK, now you can:\n\n1) Turn the Tungsten Trioxide into Hot Tungsten Ingots in the EBF with some Carbon\n2) Keep going for TS\n\nWe want TS, so put some Hydrogen along with the Tungsten Trioxide in your EBF to get rid of the Oxygen.\n\nCombine your pure Tungsten with Steel in a mixer to get Tungstensteel. Then EBF and then freeze it to get the Tungstensteel ingot.\n\nSome of Tungstensteel Dust you don't need to smelt as you will want to use it for HSS-G!\n\n[note]Note that Tungsten Trioxide to Tungsten Ingot has reduced smelt time. This does not apply to the pure version. You're gonna need a bunch of it in IV as well as the TS, so keep this in mind.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§a§lJust Enough Tungstensteel For Your Rocket",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    86,
    2890
  ],
  "rewards": [],
  "tasks": []
}
