tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier4EV-AAAAAAAAAAAAAAAAAAAABg==__LapotronDust-AAAAAAAAAAAAAAAAAAADJQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 805,
  "prerequisites": [
    789,
    1406
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Lapotron crystals require you to mix your energium dust with some lapis dust. You should check out the Storing and Transforming EU tab for the lapotron crystal and the Lapotronic Supercapacitor Multiblock.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§a§lLapotron Dust",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    789,
    1406
  ],
  "rewards": [],
  "tasks": []
}
