tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier4EV-AAAAAAAAAAAAAAAAAAAABg==__MorePowerNeededS-AAAAAAAAAAAAAAAAAAAH5w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2023,
  "prerequisites": [
    2018,
    2390
  ],
  "properties": {
    "auto_claim": false,
    "desc": "EBF and LCR recipes are going to need even more power. You'll need to craft EV energy hatches to supply them and keep them running.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§a§lMore Power Needed, Sir!",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2018,
    2390
  ],
  "rewards": [],
  "tasks": []
}
