tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier4EV-AAAAAAAAAAAAAAAAAAAABg==__NanoCPUWaferandC-AAAAAAAAAAAAAAAAAAAE4Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1249,
  "prerequisites": [
    1234,
    1018
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The NanoCPU Wafer is made out of a CPU Wafer with raw carbon fiber and molten glowstone in an EV chemical reactor. Cut it for nano CPU chips.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§a§lNanoCPU Wafer and Chip",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1234,
    1018
  ],
  "rewards": [],
  "tasks": []
}
